[package]
name = "host_butler"
version = "0.1.0"
authors = ["Albin Ekblom <albinekblom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
libc = "0.2.*"
icmp = "0.3.*"
socket2 = "0.3.*"
anyhow = "1"

