[package]
name = "port_butler"
version = "0.1.0"
authors = ["Albin Ekblom <albinekblom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
libc = "0.2.*"
icmp = "0.3.*"
socket2 = "0.3.*"
anyhow = "1"
reqwest = "0.10.*"
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.*"
select = "0.5.*"
prettytable-rs = "^0.8"

